# script-to-video-production-agent

./: CHANGELOG.md  CONTRIBUTING.md  CREATOR.md  PACKAGE-DESCRIPTION.md  README.md  RELEASE-NOTES.md  SECURITY.md  SKILL.md  SOURCES.md  TEST-PROMPTS.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
assets/config/: project-profile.schema.json
assets/config/examples/: physical-process.json  software-tutorial.json
assets/fixtures/physical-process/: source-script.docx  source-script.md  source-script.txt
assets/fixtures/software-tutorial/: source-script.docx  source-script.md  source-script.txt
evals/: trigger-evals.md  with-skill-vs-baseline.md
references/: agent-contract.md  clean-room-release.md  higgsfield-mcp.md  prompt-profiles.md  providers.md  scene-schema.md  workflow.md
scripts/: generate_fixture_docx.py  package_release.py  release_audit.py  stv_agent.py
src/script_to_video_production_agent/: __init__.py  audit.py  cli.py  hashing.py  io_utils.py  models.py  prompts.py  providers.py  render.py  review.py  storage.py
tests/: test_parsing.py  test_queue_and_cli.py  test_release_audit.py  test_review_and_prompts.py
