[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "script-to-video-production-agent"
version = "0.1.0"
description = "Turn tutorial scripts into narration-locked scenes, reviewable visuals, prompt packs, and resumable local asset queues."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jack Dalrymple" }
]
dependencies = [
  "python-docx>=1.1,<2"
]
keywords = [
  "agent-skill",
  "script-to-video",
  "docx",
  "prompt-engineering",
  "video-production"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing"
]

[project.scripts]
stv-agent = "script_to_video_production_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
test-loader = "unittest"
